--- a/app.yaml
+++ b/app.yaml
@@ -16,6 +16,10 @@ handlers:
   script: main.app
   login: admin
 
+- url: /BayArea4kMonitor
+  script: main.app
+  login: admin
+
 - url: /Status
   script: main.app
 
