--- a/cron.yaml
+++ b/cron.yaml
@@ -1,5 +1,10 @@
 cron:
 - description: Start Bay Area 4k Forcast
   url: /BayArea4kStart
-  timezone: America/Los_Angeles
-  schedule: every day 08:00
+  timezone: UTC
+  schedule: every day 15:00
+
+- description: Monitor Bay Area 4k Forcast
+  url: /BayArea4kMonitor
+  timezone: UTC
+  schedule: every 5 minutes from 15:00 to 15:30
